Modal overflow fixed

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,9 +1,10 @@
 .footer {
   color: hsl(0, 0%, 60%);
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 19px;
+  font-size: 17px;
   padding-block: 50px;
   text-transform: uppercase;
+  letter-spacing: 0.5em;
 
   @media (max-width: 650px) {
     font-size: 12px;
