--- a/src/components/ui/menuUI/MenuUI.module.css
+++ b/src/components/ui/menuUI/MenuUI.module.css
@@ -23,6 +23,7 @@
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
+  letter-spacing: 0.1em;
 
   @media (max-width: 650px) {
     font-size: 14px;
